--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown="./slides/otwsu.md">
 			</div>
 		</div>
 
